Made the Fake Kill switch and Gain

--- a/Phemex-Algo-CCXT/model.ipynb
+++ b/Phemex-Algo-CCXT/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,13 +42,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Initialize the KuCoin exchange object\n",
-    "from FakeMoney import FakeWallet\n",
     "sys.path.append(\"..\")\n",
+    "from FakeMoney import FakeWallet\n",
     "\n",
     "\n",
     "kucoin = ccxt.kucoin({\n",
@@ -67,9 +67,15 @@
     "symbol_btc = 'BTCUSDTM'\n",
     "symbol_str = \"STRKUSDTM\"\n",
     "\n",
-    "F_wallet = FakeWallet(1000)\n",
     "\n",
-    "COIN_QUNTITY_SIZE = 2\n"
+    "SIZE_FOR_TRADE = 2\n",
+    "TARGET_GAIN = 5\n",
+    "TARGET_LOSS = 3\n",
+    "\n",
+    "\n",
+    "\n",
+    "F_wallet = FakeWallet(balance=200000,coin_symbol=ORIGINAL_SYM_BIT)\n",
+    "\n"
    ]
   },
   {
@@ -81,20 +87,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(60723.8, 60723.7)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from kucoin_futures.client import Trade\n",
     "\n",
@@ -734,6 +729,56 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Offline setup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from aifc import Error\n",
+    "\n",
+    "\n",
+    "def gain_position(cur_price):\n",
+    "        print(\"Checking the Profit and Loss status\")\n",
+    "\n",
+    "        pos, side = F_wallet.get_pos_side()\n",
+    "        if not pos:\n",
+    "             raise Error(\"Not in Position\")\n",
+    "        if side == \"long\":\n",
+    "            return ((cur_price - F_wallet.price_of_coin) / F_wallet.price_of_coin) * 100\n",
+    "        elif side == \"short\":\n",
+    "            return ((F_wallet.price_of_coin - cur_price) / F_wallet.price_of_coin) * 100\n",
+    "        else:\n",
+    "            raise Error(\"Side is not Considered\")\n",
+    "        \n",
+    "def kill_position():\n",
+    "    pos,side = F_wallet.get_pos_side()\n",
+    "    while pos:\n",
+    "        print(f\"Start Killing {side} Positions ...\")\n",
+    "        ask,bid = ask_bid_kucoi(symbol=ORIGINAL_SYM_BIT)\n",
+    "\n",
+    "        if side == \"long\":\n",
+    "            F_wallet.sell_coin(ask,SIZE_FOR_TRADE,\"long\")\n",
+    "            time.sleep(5)\n",
+    "        else:\n",
+    "            F_wallet.sell_coin(bid,SIZE_FOR_TRADE,\"short\")\n",
+    "            time.sleep(5)\n",
+    "\n",
+    "        pos,side = F_wallet.get_pos_side()\n",
+    "                 \n",
+    "    print(\"Killing Position Completed ...\")\n",
+    "\n",
+    "               \n",
+    "          "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
@@ -759,27 +804,78 @@
     "    signal = data_20d.iloc[-1]['SIGNAL']\n",
     "    \n",
     "    \n",
-    "    pnl_close_kucoin()\n",
-    "    _,in_pos = get_size_pos(sy=ORIGINAL_SYM_BIT)\n",
+    "    #! For Online\n",
+    "    # pnl_close_kucoin()\n",
+    "    # _,in_pos = get_size_pos(sy=ORIGINAL_SYM_BIT)\n",
+    "\n",
+    "    # *OFFLINE\n",
+    "    cur_price = kucoin.fetch_ticker(symbol=ORIGINAL_SYM_BIT)['info']['averagePrice']\n",
+    "    in_pos = F_wallet.get_pos_side()\n",
     "\n",
     "\n",
     "    if not in_pos:\n",
+    "        print(f\"Signal For the Trade: {signal}\")\n",
     "        if signal == \"BUY\":\n",
     "            print(\"Make order as BUY !!\")\n",
     "            bp_1 = data_15m.iloc[-1]['bp_1']\n",
     "            bp_2 = data_15m.iloc[-1]['bp_2']\n",
     "            print(f\"bp_1: {bp_1} bp_2: {bp_2}\")\n",
     "            # TODO: Make Buy Order Here ...\n",
+    "\n",
+    "            avg = (bp_1+bp_2) / 2\n",
+    "\n",
+    "            # *OFFLINE - FAKE WALLET\n",
+    "            F_wallet.buy_coin(avg,SIZE_FOR_TRADE,\"long\")\n",
+    "\n",
+    "            print(\"Wait for 10 sec After Order ...\")\n",
+    "            time.sleep(10)\n",
     "        else:\n",
     "            print(\"Make order as SELL !!\")\n",
     "            sp_1 = data_15m.iloc[-1]['sp_1']\n",
     "            sp_2 = data_15m.iloc[-1]['sp_2']\n",
     "            print(f\"sp_1: {sp_1} sp_2: {sp_2}\")\n",
     "            # TODO: Make Sell Order Here ... \n",
+    "\n",
+    "            # *OFFLINE - FAKE WALLET\n",
+    "            avg = (sp_1+sp_2) / 2\n",
+    "\n",
+    "            F_wallet.buy_coin(avg,SIZE_FOR_TRADE,\"short\")\n",
+    "            print(\"Wait for 10 sec After Order ...\")\n",
+    "            time.sleep(10)\n",
     "    else:\n",
     "        print(\"Already In Position, not making new Position\")\n",
-    "bot()"
+    "        gain = gain_position()\n",
+    "        if gain >= TARGET_GAIN:\n",
+    "            print(f\"Archie the Target with gain {gain} Hooorahhh !!\")\n",
+    "            kill_position()\n",
+    "        else:\n",
+    "            print(f\"Gain is {gain}\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'60747.1297827'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
