--- a/Phemex-Algo-CCXT/model.ipynb
+++ b/Phemex-Algo-CCXT/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,6 +17,60 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "load_dotenv()\n",
+    "\n",
+    "# Retrieve API keys from environment variables\n",
+    "xP_KEY = os.getenv('xP_KEY')\n",
+    "xP_SECRAT = os.getenv('xP_SECRET')\n",
+    "\n",
+    "kC_KEY = os.getenv('kC_KEY')\n",
+    "kC_SECRET = os.getenv('kC_SECRAT')\n",
+    "kC_PASSWORD = os.getenv('kC_PASSWORD')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Kucoin API object and Fake Wallet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "kucoin = ccxt.kucoin({\n",
+    "    'enableRateLimit': True,\n",
+    "    'apiKey': kC_KEY,\n",
+    "    'secret': kC_SECRET,\n",
+    "    'password': kC_PASSWORD\n",
+    "})\n",
+    "phemex = ccxt.phemex({\n",
+    "    'enableRateLimit': True,\n",
+    "    'apiKey': xP_KEY,\n",
+    "    'secret': xP_SECRAT\n",
+    "})\n",
+    "ORIGINAL_SYM_BIT = \"BTC/USDT\"\n",
+    "ORIGINAL_SYM_STR = \"STRK/USDT\"\n",
+    "symbol_btc = 'BTCUSDTM'\n",
+    "symbol_str = \"STRKUSDTM\"\n",
+    "\n",
+    "\n",
+    "SIZE_FOR_TRADE = 2\n",
+    "TARGET_GAIN = 1\n",
+    "TARGET_LOSS = 3\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -25,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,60 +140,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "load_dotenv()\n",
-    "\n",
-    "# Retrieve API keys from environment variables\n",
-    "xP_KEY = os.getenv('xP_KEY')\n",
-    "xP_SECRAT = os.getenv('xP_SECRET')\n",
-    "\n",
-    "kC_KEY = os.getenv('kC_KEY')\n",
-    "kC_SECRET = os.getenv('kC_SECRAT')\n",
-    "kC_PASSWORD = os.getenv('kC_PASSWORD')\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Kucoin API object and Fake Wallet"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "kucoin = ccxt.kucoin({\n",
-    "    'enableRateLimit': True,\n",
-    "    'apiKey': kC_KEY,\n",
-    "    'secret': kC_SECRET,\n",
-    "    'password': kC_PASSWORD\n",
-    "})\n",
-    "phemex = ccxt.phemex({\n",
-    "    'enableRateLimit': True,\n",
-    "    'apiKey': xP_KEY,\n",
-    "    'secret': xP_SECRAT\n",
-    "})\n",
-    "ORIGINAL_SYM_BIT = \"BTC/USDT\"\n",
-    "ORIGINAL_SYM_STR = \"STRK/USDT\"\n",
-    "symbol_btc = 'BTCUSDTM'\n",
-    "symbol_str = \"STRKUSDTM\"\n",
-    "\n",
-    "\n",
-    "SIZE_FOR_TRADE = 2\n",
-    "TARGET_GAIN = 1\n",
-    "TARGET_LOSS = 3\n",
-    "\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +382,7 @@
        "[100 rows x 8 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -472,12 +472,12 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>60954.0</td>\n",
-       "      <td>61030.2</td>\n",
-       "      <td>60951.3</td>\n",
-       "      <td>61006.4</td>\n",
-       "      <td>4.450266</td>\n",
-       "      <td>2024-10-04 04:00:00</td>\n",
+       "      <td>61584.2</td>\n",
+       "      <td>61598.9</td>\n",
+       "      <td>61445.0</td>\n",
+       "      <td>61445.5</td>\n",
+       "      <td>9.173682</td>\n",
+       "      <td>2024-10-04 08:45:00</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -486,12 +486,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>61006.3</td>\n",
-       "      <td>61184.7</td>\n",
-       "      <td>60974.7</td>\n",
-       "      <td>61165.9</td>\n",
-       "      <td>8.773555</td>\n",
-       "      <td>2024-10-04 04:15:00</td>\n",
+       "      <td>61445.5</td>\n",
+       "      <td>61559.9</td>\n",
+       "      <td>61419.8</td>\n",
+       "      <td>61517.3</td>\n",
+       "      <td>15.905319</td>\n",
+       "      <td>2024-10-04 09:00:00</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -500,12 +500,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>61165.9</td>\n",
-       "      <td>61200.0</td>\n",
-       "      <td>61070.0</td>\n",
-       "      <td>61078.3</td>\n",
-       "      <td>15.494017</td>\n",
-       "      <td>2024-10-04 04:30:00</td>\n",
+       "      <td>61517.3</td>\n",
+       "      <td>61586.5</td>\n",
+       "      <td>61379.3</td>\n",
+       "      <td>61403.1</td>\n",
+       "      <td>9.625051</td>\n",
+       "      <td>2024-10-04 09:15:00</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -514,12 +514,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>61078.3</td>\n",
-       "      <td>61082.7</td>\n",
-       "      <td>60938.9</td>\n",
-       "      <td>61002.5</td>\n",
-       "      <td>14.492706</td>\n",
-       "      <td>2024-10-04 04:45:00</td>\n",
+       "      <td>61403.0</td>\n",
+       "      <td>61438.5</td>\n",
+       "      <td>61327.1</td>\n",
+       "      <td>61353.9</td>\n",
+       "      <td>13.318135</td>\n",
+       "      <td>2024-10-04 09:30:00</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -528,12 +528,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>61002.5</td>\n",
-       "      <td>61170.8</td>\n",
-       "      <td>60981.0</td>\n",
-       "      <td>61142.7</td>\n",
-       "      <td>11.366483</td>\n",
-       "      <td>2024-10-04 05:00:00</td>\n",
+       "      <td>61353.9</td>\n",
+       "      <td>61383.9</td>\n",
+       "      <td>61306.2</td>\n",
+       "      <td>61338.5</td>\n",
+       "      <td>19.068403</td>\n",
+       "      <td>2024-10-04 09:45:00</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -556,73 +556,73 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>95</th>\n",
-       "      <td>61949.8</td>\n",
-       "      <td>61949.8</td>\n",
-       "      <td>61857.1</td>\n",
-       "      <td>61861.5</td>\n",
-       "      <td>5.147591</td>\n",
-       "      <td>2024-10-05 03:45:00</td>\n",
-       "      <td>62019.280</td>\n",
-       "      <td>62081.299280</td>\n",
-       "      <td>61833.222160</td>\n",
-       "      <td>61957.260720</td>\n",
-       "      <td>62205.337840</td>\n",
+       "      <td>62151.0</td>\n",
+       "      <td>62173.4</td>\n",
+       "      <td>62087.2</td>\n",
+       "      <td>62089.4</td>\n",
+       "      <td>3.551532</td>\n",
+       "      <td>2024-10-05 08:30:00</td>\n",
+       "      <td>62072.410</td>\n",
+       "      <td>62134.482410</td>\n",
+       "      <td>61886.192770</td>\n",
+       "      <td>62010.337590</td>\n",
+       "      <td>62258.627230</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>96</th>\n",
-       "      <td>61863.0</td>\n",
-       "      <td>61898.5</td>\n",
-       "      <td>61824.1</td>\n",
-       "      <td>61824.1</td>\n",
-       "      <td>2.798412</td>\n",
-       "      <td>2024-10-05 04:00:00</td>\n",
-       "      <td>62004.890</td>\n",
-       "      <td>62066.894890</td>\n",
-       "      <td>61818.875330</td>\n",
-       "      <td>61942.885110</td>\n",
-       "      <td>62190.904670</td>\n",
+       "      <td>62089.4</td>\n",
+       "      <td>62156.4</td>\n",
+       "      <td>62089.4</td>\n",
+       "      <td>62156.4</td>\n",
+       "      <td>1.844223</td>\n",
+       "      <td>2024-10-05 08:45:00</td>\n",
+       "      <td>62087.155</td>\n",
+       "      <td>62149.242155</td>\n",
+       "      <td>61900.893535</td>\n",
+       "      <td>62025.067845</td>\n",
+       "      <td>62273.416465</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>97</th>\n",
-       "      <td>61824.0</td>\n",
-       "      <td>61958.0</td>\n",
-       "      <td>61821.3</td>\n",
-       "      <td>61948.5</td>\n",
-       "      <td>2.126568</td>\n",
-       "      <td>2024-10-05 04:15:00</td>\n",
-       "      <td>62002.355</td>\n",
-       "      <td>62064.357355</td>\n",
-       "      <td>61816.347935</td>\n",
-       "      <td>61940.352645</td>\n",
-       "      <td>62188.362065</td>\n",
+       "      <td>62156.4</td>\n",
+       "      <td>62217.2</td>\n",
+       "      <td>62145.3</td>\n",
+       "      <td>62217.1</td>\n",
+       "      <td>3.347283</td>\n",
+       "      <td>2024-10-05 09:00:00</td>\n",
+       "      <td>62106.805</td>\n",
+       "      <td>62168.911805</td>\n",
+       "      <td>61920.484585</td>\n",
+       "      <td>62044.698195</td>\n",
+       "      <td>62293.125415</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>98</th>\n",
-       "      <td>61948.5</td>\n",
-       "      <td>62017.5</td>\n",
-       "      <td>61930.6</td>\n",
-       "      <td>62002.0</td>\n",
-       "      <td>4.046745</td>\n",
-       "      <td>2024-10-05 04:30:00</td>\n",
-       "      <td>62000.855</td>\n",
-       "      <td>62062.855855</td>\n",
-       "      <td>61814.852435</td>\n",
-       "      <td>61938.854145</td>\n",
-       "      <td>62186.857565</td>\n",
+       "      <td>62217.2</td>\n",
+       "      <td>62277.9</td>\n",
+       "      <td>62148.8</td>\n",
+       "      <td>62229.1</td>\n",
+       "      <td>16.669035</td>\n",
+       "      <td>2024-10-05 09:15:00</td>\n",
+       "      <td>62120.835</td>\n",
+       "      <td>62182.955835</td>\n",
+       "      <td>61934.472495</td>\n",
+       "      <td>62058.714165</td>\n",
+       "      <td>62307.197505</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>99</th>\n",
-       "      <td>62002.0</td>\n",
-       "      <td>62018.5</td>\n",
-       "      <td>61969.5</td>\n",
-       "      <td>61974.6</td>\n",
-       "      <td>1.212038</td>\n",
-       "      <td>2024-10-05 04:45:00</td>\n",
-       "      <td>61995.260</td>\n",
-       "      <td>62057.255260</td>\n",
-       "      <td>61809.274220</td>\n",
-       "      <td>61933.264740</td>\n",
-       "      <td>62181.245780</td>\n",
+       "      <td>62229.0</td>\n",
+       "      <td>62229.1</td>\n",
+       "      <td>62183.4</td>\n",
+       "      <td>62213.9</td>\n",
+       "      <td>2.169440</td>\n",
+       "      <td>2024-10-05 09:30:00</td>\n",
+       "      <td>62131.430</td>\n",
+       "      <td>62193.561430</td>\n",
+       "      <td>61945.035710</td>\n",
+       "      <td>62069.298570</td>\n",
+       "      <td>62317.824290</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -631,17 +631,17 @@
       ],
       "text/plain": [
        "       open     high      low    close     volume                date  \\\n",
-       "0   60954.0  61030.2  60951.3  61006.4   4.450266 2024-10-04 04:00:00   \n",
-       "1   61006.3  61184.7  60974.7  61165.9   8.773555 2024-10-04 04:15:00   \n",
-       "2   61165.9  61200.0  61070.0  61078.3  15.494017 2024-10-04 04:30:00   \n",
-       "3   61078.3  61082.7  60938.9  61002.5  14.492706 2024-10-04 04:45:00   \n",
-       "4   61002.5  61170.8  60981.0  61142.7  11.366483 2024-10-04 05:00:00   \n",
+       "0   61584.2  61598.9  61445.0  61445.5   9.173682 2024-10-04 08:45:00   \n",
+       "1   61445.5  61559.9  61419.8  61517.3  15.905319 2024-10-04 09:00:00   \n",
+       "2   61517.3  61586.5  61379.3  61403.1   9.625051 2024-10-04 09:15:00   \n",
+       "3   61403.0  61438.5  61327.1  61353.9  13.318135 2024-10-04 09:30:00   \n",
+       "4   61353.9  61383.9  61306.2  61338.5  19.068403 2024-10-04 09:45:00   \n",
        "..      ...      ...      ...      ...        ...                 ...   \n",
-       "95  61949.8  61949.8  61857.1  61861.5   5.147591 2024-10-05 03:45:00   \n",
-       "96  61863.0  61898.5  61824.1  61824.1   2.798412 2024-10-05 04:00:00   \n",
-       "97  61824.0  61958.0  61821.3  61948.5   2.126568 2024-10-05 04:15:00   \n",
-       "98  61948.5  62017.5  61930.6  62002.0   4.046745 2024-10-05 04:30:00   \n",
-       "99  62002.0  62018.5  61969.5  61974.6   1.212038 2024-10-05 04:45:00   \n",
+       "95  62151.0  62173.4  62087.2  62089.4   3.551532 2024-10-05 08:30:00   \n",
+       "96  62089.4  62156.4  62089.4  62156.4   1.844223 2024-10-05 08:45:00   \n",
+       "97  62156.4  62217.2  62145.3  62217.1   3.347283 2024-10-05 09:00:00   \n",
+       "98  62217.2  62277.9  62148.8  62229.1  16.669035 2024-10-05 09:15:00   \n",
+       "99  62229.0  62229.1  62183.4  62213.9   2.169440 2024-10-05 09:30:00   \n",
        "\n",
        "      SMA_15m          bp_1          bp_2          sp_1          sp_2  \n",
        "0         NaN           NaN           NaN           NaN           NaN  \n",
@@ -650,16 +650,16 @@
        "3         NaN           NaN           NaN           NaN           NaN  \n",
        "4         NaN           NaN           NaN           NaN           NaN  \n",
        "..        ...           ...           ...           ...           ...  \n",
-       "95  62019.280  62081.299280  61833.222160  61957.260720  62205.337840  \n",
-       "96  62004.890  62066.894890  61818.875330  61942.885110  62190.904670  \n",
-       "97  62002.355  62064.357355  61816.347935  61940.352645  62188.362065  \n",
-       "98  62000.855  62062.855855  61814.852435  61938.854145  62186.857565  \n",
-       "99  61995.260  62057.255260  61809.274220  61933.264740  62181.245780  \n",
+       "95  62072.410  62134.482410  61886.192770  62010.337590  62258.627230  \n",
+       "96  62087.155  62149.242155  61900.893535  62025.067845  62273.416465  \n",
+       "97  62106.805  62168.911805  61920.484585  62044.698195  62293.125415  \n",
+       "98  62120.835  62182.955835  61934.472495  62058.714165  62307.197505  \n",
+       "99  62131.430  62193.561430  61945.035710  62069.298570  62317.824290  \n",
        "\n",
        "[100 rows x 11 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -830,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -868,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -879,11 +879,9 @@
       "starting 20 Days ...\n",
       "Opening as sell ...\n",
       "Already In Position, not making new Position\n",
-      "Current Price is 70000\n",
+      "Current Price is 62224.3\n",
       "Checking the Profit and Loss status\n",
-      "Achieved the Target with gain 13.032422092791624 Hooorahhh !!\n",
-      "Start Killing long Positions ...\n",
-      "Killing Position Completed ...\n"
+      "Gain is 0.24546369904077195, but below target.\n"
      ]
     }
    ],
@@ -935,7 +933,6 @@
     "            time.sleep(10)\n",
     "    else:\n",
     "        cur_price = ask if side == \"short\" else bid  # moved assignment up\n",
-    "        cur_price = 70000\n",
     "        print(f\"Already In Position, not making new Position\")\n",
     "        print(f\"Current Price is {cur_price}\")\n",
     "        gain = gain_position(cur_price=float(cur_price))\n",
@@ -950,20 +947,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Balance: 220031.66725000006\n",
+      "Balance: 75856.12813999999\n",
       "Coin Symbol: BTC/USDT\n",
-      "Price of Coin: 70000.0\n",
-      "Coin Quantity: 0\n",
+      "Price of Coin: 62071.93593000001\n",
+      "Coin Quantity: 2\n",
       "Side: long\n",
       "Limit: 200000\n",
-      "Date of Creation: 2024-10-05 10:45:08.987921\n"
+      "Date of Creation: 2024-10-05 15:08:30.070019\n"
      ]
     }
    ],
